sunuo (0.2.4) unstable; urgency=low

  * distribute log4net.dll
  * use log4net in exception handlers and more
  * load legacy scripts from local/src and local/lib if present

 --

sunuo (0.2.3) unstable; urgency=low

  * explicitly ignore HardwareInfo packets

 -- Max Kellermann <max@duempel.org>  Mon, 19 Dec 2005 16:25:41 +0100

sunuo (0.2.2) unstable; urgency=low

  * don't use nested Makefiles
  * distribute Mysql.Data.dll and Npgsql.dll
  * SunLogin responds to UOG queries

 -- Max Kellermann <max@duempel.org>  Mon, 19 Dec 2005 15:59:06 +0100

sunuo (0.2.1) unstable; urgency=low

  * ignore misconfiguration in Scripts/Misc/DataPath.cs, just like RunUO
    does
  * implemented a stripped down SunUO server as login server, with account
    database in ODBC
  * ExtendedCommand does its own in-game check, removed requirement
  * added ExtendedCommand 0x5555 which will serve as container for our
    protocol extensions
  * configuration option for "super clients"
  * login server can send auth ID to game servers

 -- Max Kellermann <max@duempel.org>  Fri, 16 Dec 2005 15:51:13 +0100

sunuo (0.2.0) unstable; urgency=low

  * make NetState.PacketEncoder non-static (patch from Sebastian Hartte)
  * added RunUO-Encryption-2.1.zip to core (from Sebastian Hartte)
  * fixed remote vulnerability in Network/PacketHandlers.cs, thanks to
    Barakat for reporting that
  * show a clear message when MCS is not installed

 -- Max Kellermann <max@duempel.org>  Tue, 29 Nov 2005 15:45:18 +0100

sunuo (0.1.9) unstable; urgency=low

  * created debian package (not yet done)
  * fixed typo in Config.cs which disabled <ignore-type/>
  * write etc/sunuo.xml only if it did not exist
  * fixed NullReferenceException in overlay error handler
  * home page changed to http://www.sunuo.org/
  * the mailing list is now hosted on BerliOS
  * added option to disable a script library
  * added option to set the C# compiler's warning level
  * fixed NullReferenceException in binary library loader